--- a/frontend/src/components/ApplicationsRecieved/ApplicationsRecieved.css
+++ b/frontend/src/components/ApplicationsRecieved/ApplicationsRecieved.css
@@ -12,7 +12,7 @@
     font-size: 1.1em;
 }
 .item-column-no{
-    width:5%;
+    width:10%;
 }
 
 .item-column-rollNo{
@@ -23,7 +23,14 @@
     width:35%;  
 }
 .item-column-applicantOptions{
-    width:40%;  
+    width:35%;  
     display: flex;
     flex-direction: column;
+}
+.applicationList-header{
+    font-weight: 700;
+    font-family: Montserrat;
+    text-transform: uppercase;
+    border-bottom: 2px solid #000;
+    background-color: #fff;
 }
