Moinor changes in process

--- a/frontend/src/components/ApplicationsRecieved/ApplicationsRecieved.css
+++ b/frontend/src/components/ApplicationsRecieved/ApplicationsRecieved.css
@@ -34,3 +34,14 @@
     border-bottom: 2px solid #000;
     background-color: #fff;
 }
+@media(max-width:700px){
+    .applicationsList{
+        padding: 0px;
+    } 
+    .applicationList-header{
+        font-size: 0.7em;
+    }
+    .applicationList-item{
+        font-size: 0.7em;
+    }
+}
