--- a/frontend/src/components/Admin/Admin.css
+++ b/frontend/src/components/Admin/Admin.css
@@ -8,3 +8,25 @@
     min-height: 100vh;
     width: 100%; */
 }
+@media(max-width:700px){
+    .admin-body{
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+    }
+    .leftSide{
+        height: unset;
+        min-height: 30vh;
+        width: 100%;
+        background-color: #555555;
+    }
+    .rightSide{
+        min-height: 50vh;
+        flex-grow: 100;
+        width: 100%;
+    }
+    .rightSide .container{
+        padding: 10px;
+    }
+}
