--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -28,12 +28,15 @@
     flex-direction: column;
     justify-content: center;
     flex: 1;
+    background:linear-gradient(rgba(80, 80, 80, 0.7),rgba(82, 82, 82, 0.7)),url('../../static/images/nithbg.jpg');
+    background-size: cover;
 }
 .homeContent .rightSide{
     min-height: 100vh;
     flex: 1;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     /* justify-content: center; */
     /* flex-grow: 100; */
 }
