--- a/frontend/src/components/Student/Student.css
+++ b/frontend/src/components/Student/Student.css
@@ -21,6 +21,9 @@
     min-height: 100vh;
     /* flex-grow: 100; */
     width: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 @media(max-width:700px){
