--- a/frontend/src/components/ApplicationsRecieved/ApplicationsRecieved.css
+++ b/frontend/src/components/ApplicationsRecieved/ApplicationsRecieved.css
@@ -3,36 +3,51 @@
 } 
 
 .applicationList-item{
-    padding: 10px;
+    /* padding: 10px; */
 
 }
 .applicationList-item{
     display: flex;
     flex-direction: row;
     font-size: 1.1em;
+    border-bottom: 1px solid #000;
 }
 .item-column-no{
     width:10%;
+    padding: 10px;
+    background-color: #555555;
+    color: #fff;
 }
 
 .item-column-rollNo{
     width:20%;
+    padding: 10px;
+
 }
 
 .item-column-hostel{
     width:35%;  
+    padding: 10px;
+    background-color: #555555;
+    color: #fff;
+
 }
 .item-column-applicantOptions{
     width:35%;  
     display: flex;
     flex-direction: column;
+    padding: 10px;
+    border-right: 1px solid #000000;
 }
 .applicationList-header{
     font-weight: 700;
     font-family: Montserrat;
     text-transform: uppercase;
     border-bottom: 2px solid #000;
-    background-color: #fff;
+    /* border-bottom: 2px solid #000; */
+    background-color: #555555;
+    color: #fff;
+
 }
 @media(max-width:700px){
     .applicationsList{
