--- a/frontend/src/components/RoomsAllocated/RoomsAllocated.css
+++ b/frontend/src/components/RoomsAllocated/RoomsAllocated.css
@@ -3,13 +3,13 @@
 } 
 
 .roomList-item{
-    padding: 10px;
-
+    
 }
 .roomList-item{
     display: flex;
     flex-direction: row;
     font-size: 1.1em;
+    border-bottom: 1px solid #000;
 }
 /* .item-column-no{
     width:10%;
@@ -17,27 +17,41 @@
 
 .item-column-roomNo{
     width:10%;
+    padding: 10px;
+    background-color: #555555;
+    color: #fff;
 }
 
-.item-column-hostel{
+.item-column-hostelName{
     width:45%;  
+    padding: 10px;
+
 }
 .item-column-allocated{
     width:15%;  
     display: flex;
     flex-direction: column;
+    padding: 10px;
+    background-color: #555555;
+    color: #fff;
+
 }
 .item-column-allocatedRoom{
     width:30%;  
     display: flex;
     flex-direction: column;
+    padding: 10px;
+    border-right: 1px solid #000000;
+
 }
 .roomList-header{
     font-weight: 700;
     font-family: Montserrat;
     text-transform: uppercase;
     border-bottom: 2px solid #000;
-    background-color: #fff;
+    background-color: #555555;
+    color: #fff;
+
 }
 .button-Allocate{
     font-family: Montserrat;
